  * lib/Lintian/Collect/Binary.pm:
    + [NT] Re-instate the "TEXTREL" marker.  This fixes a regression
      where shared-libs compiled without pic was not reported.
      Thanks to Dmitry Shachnev for the assistance in debugging this.
    + [NT] Recognise packages in section "metapackages" as a
      metapackage.  Thanks to Axel Beckert for the report.
      (Closes: #698610)
  * lib/Lintian/Command/Simple.pm:
    + [NT] Use constant time lookup access instead of linear scan with
      "hashref" wait.
  * lib/Lintian/Lab.pm:
    + [NT] Add lab_query method to handle lab-queries directly.
    + [NT] Fix bitrot of repair_lab and rename it to repair for
      consistency.
  * lib/Lintian/Lab{,/Manifest}.pm:
    + [NT] Add support for grouping of manifests.
  * lib/Lintian/Lab/Manifest.pm:
    + [NT] Fix an error in visit_all when sufficient keys for an
      exact look up was given.
  * lib/Lintian/Processable.pm:
    + [NT] Fix issue where packages loaded from the lab indices would
      sometimes get a wrong source-version.
  * lib/Lintian/Relation/Version.pm:
    + [NT] Add and export "versions_comparator" that can be used for
      sorting purposes.
  * lib/Lintian/Tag/Info.pm:
    + [NT] Use "&amp;" in the manpage ref URLs to generate proper HTML.
      Thanks to Vasudev Kamath for reporting the issue.
  * lib/Lintian/Util.pm:
    + [NT] Reject partially signed Deb822 files.  Most Deb822 files
      are not signed at all; but those that are should be completely
      covered by a signature.  (Closes: #696230)
    + [ADB] Fix a typo in the matching of expected delimiters for some
      signed messages; thanks Samuel Bronson.

  * private/refresh-locale-codes:
    + [JW,NT] Ignore the "zxx" locale code, which means "No
      linguistic content".  (Closes: #692548)

  * reporting/config:
    + [JP] Remove unused $GRAPH_DIR configuration option.
  * reporting/graphs/{statistics,tags}.gpi:
    + [JP] Tweak graph size to allow longer labels, and force font